@@ -132,20 +132,25 @@ void WKPageHandleWheelEvent(WKPageRef pageRef, WKWheelEvent event)
     using WebKit::WebWheelEvent;
     using WebKit::NativeWebWheelEvent;
 
-    wpe_input_axis_2d_event wpeEvent;
-    wpeEvent.base.type = (wpe_input_axis_event_type)(wpe_input_axis_event_type_motion_smooth | wpe_input_axis_event_type_mask_2d);
-    wpeEvent.base.time = 0;
-    wpeEvent.base.x = event.position.x;
-    wpeEvent.base.y = event.position.y;
-    wpeEvent.base.axis = 0;
-    wpeEvent.base.value = 0;
-    wpeEvent.base.modifiers = 0; // TODO: Handle modifiers.
-    wpeEvent.x_axis = event.delta.width;
-    wpeEvent.x_axis = event.delta.height;
-
     const float deviceScaleFactor = 1;
+    int positionX = event.position.x;
+    int positionY = event.position.y;
 
-    WebKit::toImpl(pageRef)->handleWheelEvent(NativeWebWheelEvent(&wpeEvent.base, deviceScaleFactor, WebWheelEvent::Phase::PhaseNone, WebWheelEvent::Phase::PhaseNone));
+    struct wpe_input_axis_event xEvent = {
+        wpe_input_axis_event_type_motion,
+        0, positionX, positionY,
+        1, static_cast<int32_t>(event.delta.width), 0
+    };
+
+    WebKit::toImpl(pageRef)->handleWheelEvent(NativeWebWheelEvent(&xEvent, deviceScaleFactor, WebWheelEvent::Phase::PhaseNone, WebWheelEvent::Phase::PhaseNone));
+
+    struct wpe_input_axis_event yEvent = {
+        wpe_input_axis_event_type_motion,
+        0, positionX, positionY,
+        0, static_cast<int32_t>(event.delta.height), 0
+    };
+
+    WebKit::toImpl(pageRef)->handleWheelEvent(NativeWebWheelEvent(&yEvent, deviceScaleFactor, WebWheelEvent::Phase::PhaseNone, WebWheelEvent::Phase::PhaseNone));
 }
 
 void WKPagePaint(WKPageRef pageRef, unsigned char* surfaceData, WKSize wkSurfaceSize, WKRect wkPaintRect)
