@@ -1,3 +1,15 @@
+2021-05-25  Don Olmstead  <don.olmstead@sony.com>
+
+        [PlayStation] Update usage of libWPE API
+        https://bugs.webkit.org/show_bug.cgi?id=226231
+
+        Reviewed by Ross Kirsling.
+
+        Update to use 1.6.0+ API version.
+
+        * UIProcess/API/C/playstation/WKPagePrivatePlayStation.cpp:
+        (WKPageHandleWheelEvent):
+
 2021-05-24  Darin Adler  <darin@apple.com>
 
         Switch from WTF::Optional to std::optional
